--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Decoding AI by Vidya</p>
+            <p>&copy; 2025 Decoding AI </p>
         </div>
     </footer>
 </body>
